bug fix: book menus now appear behind the title and footer

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
     border-radius: 0 0 50px 50px;
     position: fixed;
     top: 0;
-    z-index: 4;
+    z-index: 6;
 }
 
 .library {
@@ -392,6 +392,7 @@ footer {
     margin-top: 1.5rem;
     position: fixed;
     bottom: 0;
+    z-index: 6;
 
     display: flex;
     justify-content: center;
